--- a/Главная.css
+++ b/Главная.css
@@ -683,7 +683,7 @@ body {
 
 #clock {
   font-family: 'Orbitron', sans-serif;
-  color: #66ff99;
+  color: #000000;
   font-size: 56px;
   text-align: center;
   padding-top: 40px;
